feat: Create actual JWT tokens
